# rust-axum

./: .env  Cargo.toml
migrations/: 20260221000000_create_users.sql
src/: main.rs
src/config/: db.rs
src/error/: mod.rs
src/handlers/: user_handler.rs
src/models/: user.rs
src/repositories/: user_repo.rs
src/services/: user_service.rs
