[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
